--- a/index.html
+++ b/index.html
@@ -9,201 +9,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="ball-icon.png" type="image/x-icon">
     <title>Ball</title>
 </head>
 
 <body>
-    <main></main>
     <div class="main">
-
-        <div class="block1">
-            <div>
-                <h1 class="header">Commands</h1>
+        <div class="wrapper">
+            <div class="block1">
+                <div>
+                    <h1 class="header">Commands</h1>
+                </div>
+                <div>
+                    <p class="comands_item"> <span class="sign_1">←</span> <span class="item">|</span> turn left</p>
+                    <p class="comands_item"> <span class="sign_2">↑</span> <span class="item">|</span> turn up</p>
+                    <p class="comands_item"> <span class="sign_3">→</span> <span class="item">|</span> turn right</p>
+                    <p class="comands_item"> <span class="sign_4">↓</span> <span class="item">|</span> turn down</p>
+                    <p class="comands_item"> <span class="sign_5">x</span> <span class="item">|</span> slow down</p>
+                    <p class="comands_item"> <span class="sign_5">z</span> <span class="item">|</span> speed up</p>
+                    <p class="comands_item"> <span class="sign_5">c</span> <span class="item">|</span> decrease the size
+                    </p>
+                    <p class="comands_item"> <span class="sign_5">v</span> <span class="item">|</span> increase the size
+                    </p>
+                </div>
             </div>
-
-            <div>
-                <p class="comands_item"> <span class="sign_1">←</span> <span class="item">|</span> turn left</p>
-                <p class="comands_item"> <span class="sign_2">↑</span> <span class="item">|</span> turn up</p>
-                <p class="comands_item"> <span class="sign_3">→</span> <span class="item">|</span> turn right</p>
-                <p class="comands_item"> <span class="sign_4">↓</span> <span class="item">|</span> turn down</p>
-                <p class="comands_item"> <span class="sign_5">x</span> <span class="item">|</span> slow down</p>
-                <p class="comands_item"> <span class="sign_5">z</span> <span class="item">|</span> speed up</p>
-                <p class="comands_item"> <span class="sign_5">c</span> <span class="item">|</span> decrease the size</p>
-                <p class="comands_item"> <span class="sign_5">v</span> <span class="item">|</span> increase the size</p>
+            <div class=" block2">
+                <canvas id="canvas" width="490" height="250"></canvas>
+                <div class="additional_comands">
+                    <p>To choose the Ball speed from 1 to 9 push the relevant button. </p>
+                    <p>To stop the Ball push "space". </p>
+                </div>
             </div>
         </div>
-
-        <div class=" block2">
-            <canvas id="canvas" width="490" height="250"></canvas>
-
-            <div class="additional_comands">
-                <p>To choose the Ball speed from 1 to 9 push the relevant button. </p>
-                <p>To stop the Ball push "space". </p>
-            </div>
-
-        </div>
-
     </div>
-    </main>
 
     <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
-    <script>
-        var canvas = document.getElementById("canvas");
-        var ctx = canvas.getContext("2d");
-        var width = canvas.width;
-        var height = canvas.height;
-
-        var circle = function (x, y, radius, fillCircle) {
-            ctx.beginPath();
-            ctx.arc(x, y, radius, 0, Math.PI * 2, false);
-
-            if (fillCircle) {
-                ctx.fill();
-            } else {
-                ctx.stroke();
-            };
-        };
-
-        var Ball = function () {
-            this.x = width / 2;
-            this.y = height / 2;
-            this.speed = 1;
-            this.radius = 10;
-            this.xSpeed = 5;
-            this.ySpeed = 0;
-
-        };
-
-        Ball.prototype.move = function () {
-            this.x += this.xSpeed * this.speed;
-            this.y += this.ySpeed * this.speed;
-
-            if (this.x > width || this.x < 0) {
-                this.xSpeed = - this.xSpeed
-            };
-
-            if (this.y > height || this.y < 0) {
-                this.ySpeed = -this.ySpeed;
-            };
-        };
-
-        Ball.prototype.draw = function () {
-            circle(this.x, this.y, this.radius, true);
-        };
-
-        Ball.prototype.setDirection = function (direction) {
-            if (direction === "up") {
-                this.xSpeed = 0;
-                this.ySpeed = -5;
-            } else if (direction === "right") {
-                this.xSpeed = 5;
-                this.ySpeed = 0;
-            } else if (direction === "down") {
-                this.xSpeed = 0;
-                this.ySpeed = 5;
-            } else if (direction === "left") {
-                this.xSpeed = -5;
-                this.ySpeed = 0;
-            } else if (direction === "stop") {
-                this.xSpeed = 0;
-                this.ySpeed = 0;
-            };
-        };
-
-        Ball.prototype.setSpeed = function (newSpeed) {
-            if (newSpeed !== undefined) {
-                this.speed = newSpeed;
-            };
-        };
-
-        Ball.prototype.changeSpeed = function (speedVariants) {
-            if (speedVariants === "x") {
-                this.speed--
-            } else if (speedVariants === "z") {
-                this.speed++
-            };
-
-            if (this.speed < 0) {
-                this.speed = 0
-            };
-        }
-
-        Ball.prototype.sizeChange = function (size) {
-            if (size === "c") {
-                this.radius--;
-            } else if (size === "v") {
-                this.radius++
-            };
-
-            if (this.radius < 0) {
-                this.radius = 0
-            }
-        };
-
-
-
-        var ball = new Ball();
-
-        var keyActions = {
-            32: "stop",
-            37: "left",
-            38: "up",
-            39: "right",
-            40: "down"
-        };
-
-        var speeds = {
-            49: 1,
-            50: 2,
-            51: 3,
-            52: 4,
-            53: 5,
-            54: 6,
-            55: 7,
-            56: 8,
-            57: 9
-        };
-
-        var speedVariants = {
-            88: "x", //сповільнення
-            90: "z" // пришвидшення 
-        };
-
-        var size = {
-            67: "c", // зменшення
-            86: "v" //збільшення 
-        };
-
-
-        $("body").keydown(function (event) {
-            var direction = keyActions[event.keyCode];
-            var newSpeed = speeds[event.keyCode];
-            var speedVar = speedVariants[event.keyCode];
-            var oneSize = size[event.keyCode];
-            ball.setDirection(direction);
-            ball.setSpeed(newSpeed);
-            ball.changeSpeed(speedVar);
-            ball.sizeChange(oneSize);
-        });
-
-        setInterval(function () {
-            ctx.clearRect(0, 0, width, height);
-
-            ball.draw();
-            ball.move();
-
-            ctx.strokeRect(0, 0, width, height);
-        }, 30);
-
-
-
-
-
-    </script>
+    <script src="ball.js"></script>
 </body>
 
 </html>
